# ghostty-pane-splitter

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md  tasks.md
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  dependabot-version-bump.yml  release-drafter.yml  release.yml
docs/: 001-implementation-design.md  002-release-setup.md  003-custom-column-layout.md
src/: config.rs  keybind.rs  layout.rs  main.rs  split.rs
